Updated OLD css

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,4 +1,4 @@
-body {
+link(rel='stylesheet', href='/stylesheets/style.css')body {
     
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
