--- a/views/newuser.jade
+++ b/views/newuser.jade
@@ -1,11 +1,11 @@
 extends layout
 
 block content
-    h1= title
+    //-h1= title
     h1= "Chetan Kapoor"
     p= "Hi! I'm Chetan Kapoor, a New-Delhi based product ninjaa. Say hello!!. Say it now!!!!"
     form#formAddUser(name="adduser", method="post", action='/adduser')
-        input#inputUserName(type="text",placeholder="UserName",name="username")
+        //-input#inputUserName(type="text",placeholder="UserName",name="username")
         input#inputEmail(type="email",placeholder="Email",name="email")
         button#btnSubmit(type="submit") Submit
         
